@@ -1,3 +1,8 @@
+2001-12-11  Kevin Vandersloot <kfv101@psu.edu>
+
+	* proctable.c: call e_tree_model_pre_change to kill the 
+	e-table error messages
+
 2001-11-11  Kevin Vandersloot <kfv101@psu.edu>
 
 	* prettytable.c: search the .desktop name before the exec
